syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "EmployeeProto";

service EmployeeService {
  rpc AddEmployee (EmployeeRequest) returns (EmployeeResponse);
}

message EmployeeRequest {
  string last_name = 1;
  string first_name = 2;
  string middle_name = 3;
  string gender = 4;
  string birth_date = 5;
  string phone = 6;
  string hire_date = 7;
  string fire_date = 8;
  string position = 9;
  double salary = 10;
  bool is_manager = 11;
  int32 department_id = 12;
}

message EmployeeResponse {
  int32 employee_id = 1;
  string error_message = 2;
}
